--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(239, 239, 239);
+    background: rgb(7, 105, 140);
+
 }
 
   @media only screen and (max-width: 768px) {
