--- a/src/style/Search.css
+++ b/src/style/Search.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 768px) { 
 
 .NameAlbumSearch{
-    color: #3D495C;
+    color: white;
     font-size: 12;
     line-height: 150%;
     font-weight: 700px;
@@ -62,9 +62,9 @@
     display: flex;
     font-style: italic;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
-    color: #003BE5;
+    color: white;
 }
 
 ul {
