--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    background-color: rgba(7, 73, 97, 0.05);
 }
 
 
@@ -32,7 +33,7 @@
     letter-spacing: 0.03em;
     text-transform: capitalize;
     text-decoration: none;
-    color: #444955;
+    color: white;
     margin: 0 auto;
 }
 
@@ -46,7 +47,7 @@
    letter-spacing: 0.03em;
    text-transform: capitalize;
    text-decoration: none;
-   color: #444955;
+   color: white;
 }
 
 }
