--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -1,44 +1,118 @@
-.ProfilexContent {
-    left: 250px;
-    top: 0px;
-    width: 1431px;
-    height: 250px;
-    background: linear-gradient(123.66deg, #003BE5 12.08%, #00D5E2 86.52%);
+@media only screen and (max-width: 768px) { 
+    
+    .FormProfile {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .DescriptionProfileContent {
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        color: white;
+    }
+
+    .NameProfileContent {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        gap: 10px;
+        color: white;
+    }
+
+    .EmailProfileContent {
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        color: white;
+    }
+    
+    
+    .ImagemProfile{
+        width: 150px;
+        border-radius: 50%;
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+
+    }
+    
+    .LinkButton {
+        width: 152px;
+        height: 40px;
+        background-color: #003BE5;
+        border-radius: 100px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        text-decoration: none;
+        color: white;
+        text-transform: uppercase;
+    }
+    
+    span {
+        gap: 1px;
+    }
+    
 }
 
-.FormProfile {
-    display: flex;
-    margin-top: 350px;
-    margin-left: 700px;
-    gap: 16px;
-    flex-direction: column;
-}
+@media only screen and (min-width: 770px) {
 
-
-.ImagemProfile{
-    margin-top: 280px;
-    margin-left: 550px;
-    width: 350px;
-    border-radius: 3%;
-    display: inline-block;
-    position: absolute;
-}
-
-.LinkButton {
-    margin-top: 2%;
-    width: 152px;
-    height: 40px;
-    background-color: #003BE5;
-    border-radius: 100px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
-}
-
-span {
-    gap: 1px;
-}
+    .ProfilexContent {
+        position: fixed;
+        left: 250px;
+        top: 0px;
+        width: 1431px;
+        height: 250px;
+        background: linear-gradient(123.66deg, #003BE5 12.08%, #00D5E2 86.52%);
+    }
+    
+    .FormProfile {
+        display: flex;
+        margin-top: 350px;
+        margin-left: 700px;
+        gap: 16px;
+        flex-direction: column;
+    }
+    
+    
+    .ImagemProfile{
+        margin-top: 280px;
+        margin-left: 550px;
+        width: 350px;
+        border-radius: 3%;
+        display: inline-block;
+        position: absolute;
+    }
+    
+    .LinkButton {
+        margin-top: 2%;
+        width: 152px;
+        height: 40px;
+        background-color: #003BE5;
+        border-radius: 100px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        text-decoration: none;
+        color: white;
+        text-transform: uppercase;
+    }
+    
+    span {
+        gap: 1px;
+    }
+ }
